--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -24,13 +24,13 @@
                 class="icn menuicn" id="menuicn" alt="menu-icon"> -->
         </div>
 
-        <div class="searchbar">
+        <!-- <div class="searchbar">
             <input type="text" placeholder="Search">
             <div class="searchbtn">
                 <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
                     class="icn srchicn" alt="search-icon">
             </div>
-        </div>
+        </div> -->
 
         <div class="message">
             <div class="circle"></div>
